--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
+<!DOCTYPE html>
 <html>
-<body>
-
-<div class='header'><h1>Home</h1></div>
-<div class='search-view'>
-<input class='search-key' type="text"/>
-<ul class='employee-list'></ul>
-</div>
-
-<script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
-<script src="js/main.js"></script>
-
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <title>Hello World</title>
+        <script type="text/javascript" src="cordova-2.6.0.js"></script>
+		<script type="text/javascript">
+			var showMessageBox = function() {
+				navigator.notification.alert("Hello");
+			}
+			function init(){
+				document.addEventListener("deviceready", showMessageBox, true);
+			}
+        </script>
+    </head>
+    <body onload="init();">
+        <p>content</p>
+    </body>
 </html>
