--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <title>Hello World</title>
-        <script type="text/javascript" src="cordova-2.6.0.js"></script>
-		<script type="text/javascript">
-			var showMessageBox = function() {
-				navigator.notification.alert("Hello");
-			}
-			function init(){
-				document.addEventListener("deviceready", showMessageBox, true);
-			}
-        </script>
-    </head>
-    <body onload="init();">
-        <p>content</p>
-    </body>
+<head>
+	<meta charset="utf-8" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        
+<title>PhoneGap</title>
+ <script type="text/javascript" src="cordova-2.6.0.js"></script>
+ <script type="text/javascript" charset="utf-8"
+	src="commons.js"></script>
+</head>
+<body>
+ <h1>Hello World!</h1>
+</body>
 </html>
+
